# Spherical-Harmonics-Gravity-Model

./: .gitignore  README.md  pyproject.toml
examples/: testing_values
src/earthgrav/: __init__.py  geopot_coeff.py  legendre.py  spherical_gravity_model.py
