[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "earthgrav"
version = "0.1.0"
description = "Fully-normalized spherical harmonic Earth gravity model (EGM-style) with WGS84 sampling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.setuptools]
package-dir = {"" = "src"}
